--- a/recipes/Picsa.html
+++ b/recipes/Picsa.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Picsa</h1>
-    <h6><a href="recipes/gelato.html">Got Gelato?</a></h6>
-    <h6><a href="recipes/espaguesti.html">Got Espaguesti?</a></h6>
+    <h6><a href="gelato.html">Got Gelato?</a></h6>
+    <h6><a href="espaguesti.html">Got Espaguesti?</a></h6>
     <h6><a href="../index.html">Got Home?</a></h6>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4509122.jpg" alt="Picsa">
     <h2>Picsa with Ham, Asparagus, and Ricotta</h2>
