--- a/recipes/gelato.html
+++ b/recipes/gelato.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Gelato</h1>
-    <h6><a href="recipes/Picsa.html">Got Picsa?</a></h6>
-    <h6><a href="recipes/espaguesti.html">Got Espaguesti?</a></h6>
+    <h6><a href="Picsa.html">Got Picsa?</a></h6>
+    <h6><a href="espaguesti.html">Got Espaguesti?</a></h6>
     <h6><a href="../index.html">Got Home?</a></h6>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6355458.jpg&w=990&h=663&c=sc&poi=face&q=85" alt="Gelato">
     <h2>Chocolate Ice cream Mug Cake </h2>
